--- a/index.html
+++ b/index.html
@@ -16,28 +16,29 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
-    <meta property="og:url" content="https://www.molecul.es" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Molecules &middot; gra planszowa &middot; print2play" />
-    <meta property="og:description" content="Molecules to chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy." />
-    <meta property="og:image" content="https://molecul.es/img/game-small.png" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@MoleculesGame" />
-    <meta name="twitter:creator" content="@janiszt" />
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <meta property="og:url" content="https://www.molecul.es"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Molecules &middot; gra planszowa &middot; print2play"/>
+    <meta property="og:description"
+          content="Molecules to chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy."/>
+    <meta property="og:image" content="https://molecul.es/img/game-small.png"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@MoleculesGame"/>
+    <meta name="twitter:creator" content="@janiszt"/>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160706630-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'UA-160706630-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'UA-160706630-1');
     </script>
-
 </head>
 <body>
-<section class="hero dark d-flex flex-column text-white">
+<section class="hero dark d-flex flex-column text-white p-lg-5 p-sm-0">
     <aside class="w-100 flex-grow-1 text-center">
         <picture>
             <source media="(max-width: 576px)" srcset="img/game-small.png">
@@ -52,123 +53,139 @@
     </article>
     <img alt="przewiń stronę" class="scroll-arrow mt-5 mb-4" src="img/icons/chevron-down-solid.svg">
 </section>
-<div class="container-fluid col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 no-pad">
+<div class="container">
     <section id="historia" class="row">
         <div class="col p-5">
             <h2>Historia</h2>
             <p>Gra powstała w trakcie <strong>Science Game Jam 2018</strong> (SGJ) organizowanego przez <a
-      href="https://www.facebook.com/grart.krakow/">GRART</a>
-  oraz Fundację <a href="https://www.facebook.com/Marszdlanaukipolska/">Marsz dla Nauki</a>.
-  Misją SGJ jest tworzenie i promowanie gier planszowych w interesujący sposób
-  poruszających tematy naukowe. Chcemy łączyć przemyślane mechaniki z wartościowymi tematami z różnych
-  dyscyplin. Mamy nadzieję, że niniejsza gra spełni wasze oczekiwania, dostarczając zarówno rozrywki, jak
-  i wiedzy! W niecałe 12 godzin w <a href="https://www.cziitt.pw.edu.pl/">Centrum Zarządzania Innowacjami
-  i Transferem Technologii PW</a> udało się zbudować w pełni grywalny prototyp
-  i finalnie uplasowaliśmy się na pozycji 1½ (tuż za zwycięzcą).
-  Potem był czas intensywnego testowania i ulepszania gry, aby finalny prototyp zaprezentować podczas
-  <a href="https://www.facebook.com/grart.krakow/photos/a.582987778380718/2210427748970038/?type=3&theater">Planszówek na Narodowym</a>.
+                    href="https://www.facebook.com/grart.krakow/">GRART</a>
+                oraz Fundację <a href="https://www.facebook.com/Marszdlanaukipolska/">Marsz dla Nauki</a>.
+                Misją SGJ jest tworzenie i promowanie gier planszowych w interesujący sposób
+                poruszających tematy naukowe. Chcemy łączyć przemyślane mechaniki z wartościowymi tematami z różnych
+                dyscyplin. Mamy nadzieję, że niniejsza gra spełni wasze oczekiwania, dostarczając zarówno rozrywki, jak
+                i wiedzy! W niecałe 12 godzin w <a href="https://www.cziitt.pw.edu.pl/">Centrum Zarządzania Innowacjami
+                    i Transferem Technologii PW</a> udało się zbudować w pełni grywalny prototyp
+                i finalnie uplasowaliśmy się na pozycji 1½ (tuż za zwycięzcą).
+                Potem był czas intensywnego testowania i ulepszania gry, aby finalny prototyp zaprezentować podczas
+                <a href="https://www.facebook.com/grart.krakow/photos/a.582987778380718/2210427748970038/?type=3&theater">Planszówek
+                    na Narodowym</a>.
             </p>
             <p>
-  <a href="https://www.facebook.com/grart.krakow">
-      <img style="height: 100px" src="img/partners/grart.png" alt="grart"/></a>
-  <img style="height: 100px" src="img/partners/marsz-dla-nauki.png" alt="marsz dla nauki"/>
+                <a href="https://www.facebook.com/grart.krakow">
+                    <img style="height: 100px" src="img/partners/grart.png" alt="grart"/></a>
+                <img style="height: 100px" src="img/partners/marsz-dla-nauki.png" alt="marsz dla nauki"/>
             </p>
             <h2>Zasady</h2>
             <p>
-  Molecules to chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy.
-  Celem każdego z graczy jest ułożenie jak największej ilości związków chemicznych wybranych na
-  początku rozgrywki. Aby tego dokonać gracz może dokładać, przesuwać i wymieniać pierwiastki, które są na
-  planszy oraz na ręku, a także dzielić bądź łączyć już całe związki niszcząc przy tym plany
-  przeciwników.
-            </p>
-        </div>
-    </section>
-    <section id="edycje" class="row dark">
-        <div class="col p-5 text-white">
-            <h2 class="mb-5">Edycje pudełkowe</h2>
-            <h4>Standard</h4>
-            <p>Standardowa wersja zawiera wysokiej jakości polimerowe żetony z niezniszczalnym nadrukiem UV.</p>
-            <a class="btn btn-outline-danger mb-2 mr-2 mt-2 mb-5" href="#">Aktualnie niedostepne</a>
-            <h4>Premium Wooden</h4>
-            <p>Wersja Drewniana – zawiera te same elementy co wersja standardowa, ale wszystkie są drewniane.
-  Istnieje ograniczona liczba takich zestawów.
-            </p>
-            <a class="btn btn-outline-danger mb-2 mr-2 mt-2" href="#">Aktualnie niedostepne</a>
-        </div>
-    </section>
-    <section id="pobierz" class="row">
-        <div class="col p-5">
-            <h2>Quarantine Edition</h2>
-            <p>
-  Wydany w marcu 2020 pakiet "kwarantanna", zawiera wszystkie elementy w formacie elektronicznym do
-  samodzielnego druku, tak aby zminimalizować kontakt z innymi ludźmi. Ciesz się Molecules bez
-  wychodzenia
-  z domu – wszystko czego potrzebujesz to drukarka i papier!
-            </p>
-            <h3 class="mb-4">Do pobrania:</h3>
-            <p>
-  <a class="btn btn-outline-success mb-2 mr-2" href="game/molecules-1.0.zip">Wydrukuj i zagraj (PDF)</a>
-            </p>
-            <small class="text-black-50">Molecules jest dostępne za darmo na licencji o uznanie autorstwa-Użycie
-  niekomercyjne-Na tych samych
-  warunkach 2.0 Ogólny (<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.pl">CC BY-NC-SA 2.0</a>).
-  Wystarczy, że poświęcisz około 20 minut z drukarką i nożyczkami
-  albo 20 PLN w lokalnym punkcie ksero.
-            </small>
-        </div>
-    </section>
-    <section id="galeria" class="row dark pt-3 pb-3">
-        <div class="col-sm-3 mt-3">
-            <img class="w-100" src="img/photos/photo1.jpg" alt="przykładowa rozgrywka">
-        </div>
-        <div class="col-sm-3 mt-3">
-            <img class="w-100" src="img/photos/photo2.jpg" alt="przykładowa rozgrywka">
-        </div>
-        <div class="col-sm-3 mt-3">
-            <img class="w-100" src="img/photos/photo3.jpg" alt="przykładowa rozgrywka">
-        </div>
-        <div class="col-sm-3 mt-3">
-            <img class="w-100" src="img/photos/photo4.jpg" alt="przykładowa rozgrywka">
-        </div>
-    </section>
-    <section id="faq" class="row">
-        <div class="col p-5">
-            <h3>Często zadawane pytania</h3>
-            <p>
-  <strong>Czy Molecules jest dostępne poza Polską?</strong>
-  <br/>
-  Jeszcze nie. Pracujemy nad wersją angielską i niemiecką
-            </p>
-            <p>
-  <strong>Czy mogę zrobić własną wersję Molecules?</strong>
-  <br/>
-  Pewnie! Molecules jest rozpowszechniana na Licencji Creative Commons BY–NC–SA 4.0.
-  To oznacza, że w swojej wersji musisz wspomnieć o wersji oryginalnej i nie możesz na niej zarabiać
-  (sprzedawać, wynajmować itp). Twoja wersja musi być rozpowszechniana na tej samej licencji co oryginał.
-  Pamiętaj, że to na Tobie spoczywa obowiązek sprawdzenia, czy nie naruszasz warunków licencji – w razie
-  wątpliwości daj nam znać, chętnie pomożemy :)
-            </p>
-            <p>
-  <strong>Znalazłem błąd, co robić?</strong>
-  <br/>
-  Koniecznie napisz nam <a href='mailto:kontakt@molecul.es'>maila</a>.
+                Molecules to chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy.
+                Celem każdego z graczy jest ułożenie jak największej ilości związków chemicznych wybranych na
+                początku rozgrywki. Aby tego dokonać gracz może dokładać, przesuwać i wymieniać pierwiastki, które są na
+                planszy oraz na ręku, a także dzielić bądź łączyć już całe związki niszcząc przy tym plany
+                przeciwników.
             </p>
         </div>
     </section>
 </div>
-<footer class="w-100 text-center">
-    <hr/>
-    <p>
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-          <img alt="Licencja Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
-          <br />
-          Ten utwór jest dostępny na
-          <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-            licencji Creative Commons Uznanie autorstwa-Użycie niekomercyjne-Na tych samych warunkach 4.0 Międzynarodowe
-          </a>.
-        <br/>
-        <small>© 2020 Bartosz Gałek &amp; Tomasz Janiszewski</small>
-    </p>
+<div class="dark">
+    <div class="container">
+        <section id="edycje" class="row">
+            <div class="col p-5 text-white">
+                <h2 class="mb-5">Edycje pudełkowe</h2>
+                <h4>Standard</h4>
+                <p>Standardowa wersja zawiera wysokiej jakości polimerowe żetony z niezniszczalnym nadrukiem UV.</p>
+                <a class="btn btn-outline-danger mb-2 mr-2 mt-2 mb-5" href="#">Aktualnie niedostepne</a>
+                <h4>Premium Wooden</h4>
+                <p>Wersja Drewniana – zawiera te same elementy co wersja standardowa, ale wszystkie są drewniane.
+                    Istnieje ograniczona liczba takich zestawów.
+                </p>
+                <a class="btn btn-outline-danger mb-2 mr-2 mt-2" href="#">Aktualnie niedostepne</a>
+            </div>
+        </section>
+    </div>
+</div>
+<div class="container">
+    <section id="pobierz" class="row">
+        <div class="col p-5">
+            <h2>Quarantine Edition</h2>
+            <p>
+                Wydany w marcu 2020 pakiet "kwarantanna", zawiera wszystkie elementy w formacie elektronicznym do
+                samodzielnego druku, tak aby zminimalizować kontakt z innymi ludźmi. Ciesz się Molecules bez
+                wychodzenia
+                z domu – wszystko czego potrzebujesz to drukarka i papier!
+            </p>
+            <h3 class="mb-4">Do pobrania:</h3>
+            <p>
+                <a class="btn btn-outline-success mb-2 mr-2" href="game/molecules-1.0.zip">Wydrukuj i zagraj (PDF)</a>
+            </p>
+            <small class="text-black-50">Molecules jest dostępne za darmo na licencji o uznanie autorstwa-Użycie
+                niekomercyjne-Na tych samych
+                warunkach 2.0 Ogólny (<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.pl">CC BY-NC-SA
+                    2.0</a>).
+                Wystarczy, że poświęcisz około 20 minut z drukarką i nożyczkami
+                albo 20 PLN w lokalnym punkcie ksero.
+            </small>
+        </div>
+    </section>
+</div>
+<div class="dark">
+    <div class="container">
+        <section id="galeria" class="row">
+            <div class="container-fluid">
+                <div class="pr-5 pl-5 pt-4 pb-4 row">
+                    <div class="col-xs-12 col-sm-6 p-3">
+                        <img class="img-fluid" src="img/photos/photo1.jpg" alt="przykładowa rozgrywka">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 p-3">
+                        <img class="img-fluid" src="img/photos/photo2.jpg" alt="przykładowa rozgrywka">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 p-3">
+                        <img class="img-fluid" src="img/photos/photo3.jpg" alt="przykładowa rozgrywka">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 p-3">
+                        <img class="img-fluid" src="img/photos/photo4.jpg" alt="przykładowa rozgrywka">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+<div class="container">
+    <section id="faq" class="row">
+        <div class="col p-5">
+            <h3>Często zadawane pytania</h3>
+            <p>
+                <strong>Czy Molecules jest dostępne poza Polską?</strong>
+                <br/>
+                Jeszcze nie. Pracujemy nad wersją angielską i niemiecką
+            </p>
+            <p>
+                <strong>Czy mogę zrobić własną wersję Molecules?</strong>
+                <br/>
+                Pewnie! Molecules jest rozpowszechniana na Licencji Creative Commons BY–NC–SA 4.0.
+                To oznacza, że w swojej wersji musisz wspomnieć o wersji oryginalnej i nie możesz na niej zarabiać
+                (sprzedawać, wynajmować itp). Twoja wersja musi być rozpowszechniana na tej samej licencji co oryginał.
+                Pamiętaj, że to na Tobie spoczywa obowiązek sprawdzenia, czy nie naruszasz warunków licencji – w razie
+                wątpliwości daj nam znać, chętnie pomożemy :)
+            </p>
+            <p>
+                <strong>Znalazłem błąd, co robić?</strong>
+                <br/>
+                Koniecznie napisz nam <a href='mailto:tomek@molecul.es,bartosz@molecul.es'>maila</a>.
+            </p>
+        </div>
+    </section>
+</div>
+<hr/>
+<footer class="container text-center d-flex flex-column">
+    <a class="mb-2 mt-1" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+        <img alt="Licencja Creative Commons" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"/></a>
+    <small class="m-2 license">Ten utwór jest dostępny na
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencji Creative Commons Uznanie
+            autorstwa-Użycie niekomercyjne-Na tych samych warunkach 4.0
+            Międzynarodowe
+        </a>.</small>
+    <small class="mb-4">© 2020 Bartosz Gałek &amp; Tomasz Janiszewski @ Warszawa &middot; Używamy plików cookies
+        (Google Analytics), aby zapewnić Ci najlepsze doświadczenie na naszej stronie.</small>
 </footer>
 </body>
 </html>
