--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Molecules &middot; gra planszowa &middot; print2play</title>
+    <meta name="description"
+          content="Chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy.">
+    <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet"
@@ -16,7 +19,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
-    <meta property="og:url" content="https://www.molecul.es"/>
+    <meta property="og:url" content="https://molecul.es"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Molecules &middot; gra planszowa &middot; print2play"/>
     <meta property="og:description"
