Add info about print2play

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
                 planszy oraz na ręku, a także dzielić bądź łączyć już całe związki niszcząc przy tym plany
                 przeciwników.
             </p>
+            <h2>Dla kogo?</h2>
+            <p>
+                Gra jest przeznaczona dla osób w wieku od 10 lat.
+                Do grania wymagana jest umiejętność czytania i liczenia... przynajmniej do 5.
+                Nie jest wymagana znajomość chmemii, choć na pewno będzie dodatkowym atutem.
+                Więc nie ważne, czy pasjonujesz się chemią,
+                czy wręcz przeciwnie: kwasy i zasady nie dają ci spać po nocach,
+                a na widok wzoru strukturalnego dostajesz gęsiej skórki – ta gra jest dla Ciebie.
+            </p>
         </div>
     </section>
 </div>
@@ -109,12 +118,18 @@
 <div class="container">
     <section id="pobierz" class="row">
         <div class="col p-5">
-            <h2>Quarantine Edition</h2>
+            <h2>Quarantine Edition ☣</h2>
             <p>
-                Wydany w marcu 2020 pakiet "kwarantanna", zawiera wszystkie elementy w formacie elektronicznym do
+                Z uwagi na ogłoszony w Polsce
+                <a href="https://www.gov.pl/web/koronawirus/od-dzis-wprowadzimy-stan-zagrozenia-epidemicznego">stan zagrożenia epidemilogicznego</a>,
+                zdecyodwaliśmy się na wydanie specjalnej wersji.
+                Zawiera ona wszystkie elementy w formacie elektronicznym do
                 samodzielnego druku, tak aby zminimalizować kontakt z innymi ludźmi. Ciesz się Molecules bez
-                wychodzenia
-                z domu – wszystko czego potrzebujesz to drukarka i papier!
+                wychodzenia z domu – wszystko czego potrzebujesz to drukarka, papier i nożyczki.
+                Wystarczy, że wydrukujesz materiały, wytniesz żetony pierwiastków i karty zawiązków.
+                Jeśli chcesz, możesz możesz skorzystać z grubszego papieru lub nalepić żetony na kapsle lub korki
+                od butelek. Karty związków idealnie zmieszczą się w standardowych koszulkach na karty 63,5×88 mm.
+                Następnie przeczytaj dokładnie instrukcję i graj!
             </p>
             <h3 class="mb-4">Do pobrania:</h3>
             <p>
