container for desktop

--- a/index.html
+++ b/index.html
@@ -41,20 +41,22 @@
     </script>
 </head>
 <body>
-<section class="hero dark d-flex flex-column text-white p-lg-5 p-sm-0">
-    <aside class="w-100 flex-grow-1 text-center">
-        <picture>
-            <source media="(max-width: 768px)" srcset="img/game-small.png">
-            <source media="(min-width: 769px)" srcset="img/game-big.png">
-            <img class="img-fluid" src="img/game-small.png" alt="żetony molecules">
-        </picture>
-    </aside>
-    <article class="pr-5 pl-5">
-        <h1>Co to jest Molecules?</h1>
-        <p>Molecules to chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy.</p>
-        <a class="btn btn-success" href="#pobierz">zagraj za darmo</a>
-    </article>
-    <img alt="przewiń stronę" class="scroll-arrow mt-5 mb-4" src="img/icons/chevron-down-solid.svg">
+<section class="hero dark">
+    <div class="container d-flex flex-column text-white p-0 p-lg-5">
+        <aside class="w-100 flex-grow-1 text-center">
+            <picture>
+                <source media="(max-width: 768px)" srcset="img/game-small.png">
+                <source media="(min-width: 769px)" srcset="img/game-big.png">
+                <img class="img-fluid" src="img/game-small.png" alt="żetony molecules">
+            </picture>
+        </aside>
+        <article class="pr-5 pl-5">
+            <h1>Co to jest Molecules?</h1>
+            <p>Molecules to chemiczna gra edukacyjno-imprezowa o budowaniu związków chemicznych dla 2-4 graczy.</p>
+            <a class="btn btn-success" href="#pobierz">zagraj za darmo</a>
+        </article>
+        <img alt="przewiń stronę" class="scroll-arrow mt-5 mb-4" src="img/icons/chevron-down-solid.svg">
+    </div>
 </section>
 <div class="container">
     <section id="historia" class="row">
